--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,10 @@
 
 </head>
 <body>
-  <p>Back <a href="index2.html">Page 2.<p>
+  <p>Welcome to page 2! <br>
+     Here I'll go into a little more depth about some of my life. I have 3 siblings, 2 of which attend Huntington as well. My sister went to Grace collage in 2019. <br>
+     I am really into collecting and restoring old game consoles. I like to shop for stuff online and at used game shops to find good deals and add to my collection.
+     <a href="index2.html">Page 2.<p>
 </body>
   
 </html>
