--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li>Steak</li>
     <li>Pulled Pork</li>
   </ul>
-  <img src="Food.png" alt="Food" width="100" height="100"">
+  <img src="Screenshot 2024-10-15 193543.png" alt="Food" width="100" height="100"">
   <a href="page2.html">Next </a>
 </body>
 </html>
